--- a/Franstastic/package.json
+++ b/Franstastic/package.json
@@ -25,7 +25,8 @@
     "core-js": "^2.4.1",
     "firebase": "^5.3.1",
     "npm": "^6.3.0",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
