--- a/Franstastic/package.json
+++ b/Franstastic/package.json
@@ -24,6 +24,7 @@
     "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.4.1",
     "firebase": "^5.3.1",
+    "ng2-dragula": "^2.0.2",
     "npm": "^6.3.0",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
